# py-evofe

./: .gitignore  LICENSE.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  example.py  example_higgs.py  progress.md  pyproject.toml  test_polars.py
.github/workflows/: ci.yml
src/evofe/: __init__.py  estimator.py  transformers.py  utils.py
src/evofe/builtin/: __init__.py  categorical.py  clustering.py  grouping.py  math.py  reduction.py  supervised.py
src/evofe/evaluation/: __init__.py  cv.py  metrics.py  models.py  tuning.py
src/evofe/evolution/: __init__.py  engine.py  individual.py  population.py
tests/: test_e2e_parity.py  test_evolution.py  test_integration.py  test_math_transformers.py  test_parity.py
