[project]
name = "evofe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "polars>=1.36.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "umap-learn>=0.5.12",
    "xgboost>=2.1.4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.18",
]
